<resources>
    <string name="app_name">Quiz App</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="out_of_five">/5</string>
    <string name="next"><![CDATA[Next ->]]></string>
    <string name="submit"><![CDATA[Submit ->]]></string>
    <string name="restart">Restart</string>
    <string name="unattempted">Unattempted -</string>
    <string name="correct">Correct -</string>
    <string name="incorrect">Incorrect -</string>
    <string name="final_score_head">Your final score is</string>
    <string name="good_job">Good job!</string>
    <string name="excellent_work">Excellent work!</string>
    <string name="genius">You are a genius!</string>
    <string name="try_again">Please try again!</string>
</resources>